# gameping-indicator

./: README.md  meson.build
data/: com.github.alainm23.gameping-indicator  com.github.alainm23.gameping-indicator.appdata.xml  com.github.alainm23.gameping-indicator.desktop  com.github.alainm23.gameping-indicator.gresource.xml  com.github.alainm23.gameping-indicator~  com.github.alainm23.gameping.appdata.xml  com.github.alainm23.gameping.appdata.xml~  com.github.alainm23.gameping.desktop  meson.build
debian/: changelog  control  copyright  rules
meson/: post_install.py
src/: Indicator.vala
src/Services/: Ping.vala
src/Widgets/: PopoverWidget.vala
